--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.2.10
 Django==3.1.1
 django-crispy-forms==1.9.2
+djangorestframework==3.12.1
 flake8==3.8.3
 gunicorn==20.0.4
 mccabe==0.6.1
